fix padding issue on mobile tab buttons.. again

--- a/src/Components/tabs.modules.css
+++ b/src/Components/tabs.modules.css
@@ -10,6 +10,8 @@
 .tab {
     display: flex;
     padding: 0;
+    margin: 0;
+    border: 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
